apps/generic/overlays/wallabag/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
spec:
  template:
    spec:
      containers:
        - name: container
          image: wallabag/wallabag:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: yasr-volume
              mountPath: /var/www/wallabag/data
              subPath: configs/wallabag/data/
            - name: yasr-volume
              mountPath: /var/www/wallabag/web/assets/images
              subPath: configs/wallabag/images/
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
