apps/generic/overlays/wallabag/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
