apps/generic/overlays/wallabag/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag
  annotations:
    forecastle.stakater.com/appName: "Wallabag"
    forecastle.stakater.com/group: "Tools"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: "https://www.wallabag.org/favicon.ico"
